--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "rime/linux/fcitx5-nord"]
-	path = rime/linux/fcitx5-nord
-	url = https://github.com/tonyfettes/fcitx5-nord.git
+[submodule "sddm/sddm-sugar-candy"]
+	path = sddm/sddm-sugar-candy
+	url = https://framagit.org/MarianArlt/sddm-sugar-candy.git
