feat(rofi): add powermenu

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -138,7 +138,7 @@ font-1 = "Iosevka Nerd Font:size=12;3"
 
 modules-left = bspwm
 modules-center = date
-modules-right = pulseaudio network battery sysmenu
+modules-right = pulseaudio network battery powermenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
