--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -206,7 +206,7 @@ ramp-signal-4 = 直
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/sysmenu]
+[module/powermenu]
 type = custom/text
 
 content = 襤
@@ -214,8 +214,8 @@ content = 襤
 content-foreground = ${color.fg}
 ;;content-padding = 4
 
-click-left = ~/.config/polybar/scripts/powermenu.sh --edark
-click-right = ~/.config/polybar/scripts/powermenu.sh --edark
+click-left = sh ~/.config/rofi/powermenu.sh
+click-right = sh ~/.config/rofi/powermenu.sh
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
