feat(rime): add some rime dict and update config

--- a/rime/linux/default.custom.yaml
+++ b/rime/linux/default.custom.yaml
@@ -3,6 +3,7 @@ patch:
     page_size: 8
   schema_list:
   - schema: luna_pinyin_simp
+    # - schema: aurora_pinyin
   ascii_composer:
     good_old_caps_lock: true
     switch_key:
